# gist

./: .dockerignore  .gitignore  .ogrules  CONTRIBUTING.md  DELETE FROM users.sql  DESIGN.md  LICENSE  README.md  SECURITY.md  SETUP.md  deploy.sh  docker-compose-local.yml  docker-compose.yml  onboarding.md  start-local.sh
.husky/: pre-commit
server/: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
server/migrations/models/: 0_20250223162816_init.py  0_20250310204350_init.py  1_20250223183331_update.py  1_20250224162255_update.py  1_20250315173634_update.py  2_20250223230506_update.py  2_20250309190708_update.py  2_20250315212723_update.py  3_20250310161946_add_tasks.py  3_20250316163259_update.py  4_20250310162424_add_task_features.py  4_20250320092750_update.py  5_20250321105136_update.py  6_20250322235152_None.py  7_20250323232607_update.py
server/src/: database.py  dependencies.py
server/src/agents/: base_agent.py  content_classifier.py  content_summarizer.py  domain_inference_agent.py  email_domain_inferencer.py  email_extractor.py  email_scorer.py  feedback_learning_agent.py  personality_summarizer.py  questions_generator.py  spam_classifier.py  task_cost_features_extractor.py  task_extractor.py  task_utility_features_extractor.py
server/src/config/: settings.py
server/src/exceptions/: __init__.py  database.py  handlers.py
server/src/models/: task.py  task_features.py  task_scoring.py  user.py
server/src/models/graph/: nodes.py  task.py
server/src/modules/agent/: onboarding_service.py  router.py  schemas.py  service.py
server/src/modules/agents/: base_agent.py  personality_summarizer.py  spam_classifier.py  task_extractor.py
server/src/modules/auth/: constants.py  dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  service.py  utils.py
server/src/tools/: get_task_deadline.py  test_ml_scoring.py
server/src/utils/: common.py  encryption.py  file_utils.py  get_task_scores.py  get_text_from_html.py  get_utility_score.py  sgd-train.py
server/tests/: test_main.py
server/tests/agents/: conftest.py  test_base_agent.py  test_content_classifier.py  test_content_summarizer.py  test_domain_inference_agent.py  test_email_extractor.py  test_personality_summarizer.py  test_spam_classifier.py  test_task_extractor.py
server/tests/models/: test_task_scoring.py
(+158 files in other folders)
